--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Roxanne Shoar" />
@@ -14,21 +13,23 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Noto+Serif:ital@0;1&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Noto+Serif:ital@0;1&display=swap"
+      rel="stylesheet"
+    />
     <title>Triple Peaks Coffee Shop</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="page">
-        <header></header>
-        <main>
-            <section class="recipes"></section>
-            <section class="reservation"></section>
-            <section class="menu"></section>
-            <section class="about"></section>
-        </main>
-        <footer></footer>
+      <header class="header"></header>
+      <main class="content">
+        <section class="recipes"></section>
+        <section class="reservation"></section>
+        <section class="menu"></section>
+        <section class="about"></section>
+      </main>
+      <footer class="footer"></footer>
     </div>
-</body>
-
+  </body>
 </html>
