--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Roxanne Shoar" />
     <meta name="description" content="Coffee Shop at TriplePeaks library" />
     <meta name="keywords" content="coffee shop, library, TriplePeaks " />
+    <title>Triple Peaks Coffee Shop</title>
     <link rel="shortcut icon" href="favicon.ico" />
     <link rel="stylesheet" href="./vendor/normalize.css" />
     <link rel="stylesheet" href="./pages/index.css" />
@@ -13,23 +15,81 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Noto+Serif:ital@0;1&display=swap"
-      rel="stylesheet"
-    />
-    <title>Triple Peaks Coffee Shop</title>
-  </head>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Noto+Serif:ital@0;1&display=swap" rel="stylesheet" />
+</head>
 
-  <body>
+<body>
     <div class="page">
-      <header class="header"></header>
-      <main class="content">
-        <section class="recipes"></section>
-        <section class="reservation"></section>
-        <section class="menu"></section>
-        <section class="about"></section>
-      </main>
-      <footer class="footer"></footer>
+        <header class="header">
+            <nav class="nav">
+                <img src="./images/logo_coffeeshop_dark.svg" alt="logo" class="nav__logo" />
+
+                <ul class="nav__links">
+                    <li>
+                        <a href="#recipes" class="nav__link">Recipes</a>
+                    </li>
+
+                    <li>
+                        <a href="#book-a-table" class="nav__link">Book a Table</a>
+                    </li>
+
+                    <li>
+                        <a href="#menu" class="nav__link">Menu</a>
+                    </li>
+
+                    <li>
+                        <a href="#contacts" class="nav__link">Contacts</a>
+                    </li>
+                </ul>
+            </nav>
+
+            <h1 class="header__title">
+                <span class="span-accent">Specialty Coffee</span> in the Triple Peaks library
+            </h1>
+            <p class="header__description">
+                Welcome to our study zone! We 've got the coffee to energize you and the cozy vibes to help you get creative.
+            </p>
+            <img src="./images/inside_coffee_shop.png" alt="Library" class="header__image" />
+
+            <div class="header__footer">
+                <p class="header__paragraph">Hours:</p>
+                <p class="header__paragraph">Monday – Friday (10:00 – 19:00)</p>
+                <p class="header__paragraph">Saturday – Sunday (11:00 – 18:00)</p>
+                <p class="header__paragraph">
+                    200 Success Avenue, The Town of Triple Peaks
+                </p>
+            </div>
+        </header>
+
+        <main class="content">
+            <git addtion class="recipes" id="recipes">
+                <h2 class="recipes__title">Recipes</h2>
+                <p class="recipes__subtitle">
+                    Check out some recipes we've collected for your home-brewing convenience:
+                </p>
+
+                <div class="recipes__videos">
+                    <div>
+                        <iframe class="recipes__iframe" src="https://www.youtube.com/embed/j6VlT_jUVPc?si=Vkv-CjRVmtn7eSgX" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                        <p class="recipes__video-caption">
+                            Aeropress recipe<span>~5 min</span>
+                        </p>
+                    </div>
+
+                    <div>
+                        <iframe class="recipes__iframe" src="https://www.youtube.com/embed/st571DYYTR8?si=CUOhf6YtdBcBZo9K" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                        <p class="recipes__video-caption">
+                            French press recipe<span>~15 min</span>
+                        </p>
+                    </div>
+                </div>
+                </section>
+
+                <section class="reservation" id="book-a-table"></section>
+                <section class="menu" id="menu"></section>
+        </main>
+        <footer class="footer" id="contacts"></footer>
     </div>
-  </body>
+</body>
+
 </html>
