Add about section

--- a/index.html
+++ b/index.html
@@ -98,10 +98,8 @@
                         <label for="guests" class="form__label">Number of guests *
               </label>
                         <input type="number" min="1" max="8" id="guests" class="form__input" placeholder="1-8" required />
-
                         <label for="date-time" class="form__label">Date & time * </label>
                         <input type="datetime-local" id="date-time" class="form__input" required />
-
                         <label for="email" class="form__label">Your email * </label>
                         <input type="email" id="email" class="form__input" placeholder="email@email.com" required />
 
@@ -116,18 +114,17 @@
             </section>
 
             <section class="menu" id="menu">
-
                 <h2 class="menu__title">Menu</h2>
-                <p class="menu__subtitle">We brew coffee from locally roasted, Fairtrade certified beans and use biodegradable cups. All teas from our collection are $2/cup.</p>
+                <p class="menu__subtitle">
+                    We brew coffee from locally roasted, Fairtrade certified beans and use biodegradable cups. All teas from our collection are $2/cup.
+                </p>
                 <div class="menu__cards">
-
                     <div class="card">
-                        <h3 class="card__title"> Filter</h3>
+                        <h3 class="card__title">Filter</h3>
                         <ul class="card__list">
-
                             <li class="card__list-item">
                                 Regular (12 oz)
-                                <span class="card__list-divider">  </span> $1
+                                <span class="card__list-divider"> </span> $1
                             </li>
 
                             <li class="card__list-item">
@@ -149,15 +146,12 @@
                                 Iced Coffee (16 oz)
                                 <span class="card__list-divider"></span> $1.25
                             </li>
-
                         </ul>
                     </div>
 
-
                     <div class="card">
-                        <h3 class="card__title"> Espresso</h3>
+                        <h3 class="card__title">Espresso</h3>
                         <ul class="card__list">
-
                             <li class="card__list-item">
                                 Macchiato
                                 <span class="card__list-divider"></span> $2.25
@@ -177,16 +171,12 @@
                                 Sunrise in the Bay Area (decaf)
                                 <span class="card__list-divider"></span> $10.00
                             </li>
-
                         </ul>
                     </div>
 
-
-
                     <div class="card">
-                        <h3 class="card__title">Baked goods </h3>
+                        <h3 class="card__title">Baked goods</h3>
                         <ul class="card__list">
-
                             <li class="card__list-item">
                                 Almond Croissant
 
@@ -217,16 +207,27 @@
                                 Fresh Bug'uette
                                 <span class="card__list-divider"></span> $0.25
                             </li>
-
-
                         </ul>
                     </div>
-
                 </div>
-
             </section>
 
-            <section class="about" id="about"></section>
+            <section class="about" id="about">
+                <h2 class="about__title">About the coffee shop</h2>
+                <div class="about__content">
+                    <p class="about__paragraph">
+                        Our coffee shop is located in the Triple Peaks Library. It features 6 tables and free WiFi.
+                    </p>
+                    <p class="about__paragraph">
+                        Our main mission is keeping guests cozy and energized.
+                    </p>
+                    <p class="about__paragraph">
+                        Besides that, we try to reproduce our environmental impact &mdash; so we dont sell single-sue cups. But you can buy one of our re-usable cups!
+                    </p>
+                </div>
+                <div class="about__circle"></div>
+                <div class="about__circle about__circle_animation_blurred"></div>
+            </section>
         </main>
         <footer class="footer" id="contacts"></footer>
     </div>
