--- a/index.html
+++ b/index.html
@@ -229,7 +229,26 @@
                 <div class="about__circle about__circle_animation_blurred"></div>
             </section>
         </main>
-        <footer class="footer" id="contacts"></footer>
+        <footer class="footer" id="contacts">
+            <div class="footer__content">
+                <img src="./images/logo_coffeeshop_light.svg" alt="Logo" class="footer__logo" />
+                <div class="footer__social">
+                    <h3 class="footer__social-heading">Social Media</h3>
+                    <ul class="footer__list">
+                        <li class="footer__list-item">
+                            <img class="footer__social-icon" src="./images/facebook_white.svg" alt="Facebook" />
+                            <a class="footer__social-link" href="">Facebook</a>
+                        </li>
+
+                        <li class="footer__list-item">
+                            <img class="footer__social-icon" src="./images/instagram_white.svg" alt="Instagram" />
+                            <a class="footer__social-link" href="">Instagram</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <p class="footer__copyright">© 2023 Roxanne Shoar</p>
+        </footer>
     </div>
 </body>
 
