--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
         </nav>
 
         <h1 class="header__title">
-          <span class="span-accent">Specialty Coffee</span> in the Triple Peaks
-          library
+          <span class="header__span-accent">Specialty Coffee</span> in the
+          Triple Peaks library
         </h1>
         <p class="header__description">
           Welcome to our study zone! We 've got the coffee to energize you and
